--- a/Views/Departaments/Index.cshtml
+++ b/Views/Departaments/Index.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Lista de Departamentos</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Criar Departamento", "Create", null, new { @class="btn btn-primary"})
 </p>
 <table class="table">
     <tr>
@@ -23,9 +23,9 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.DepartamentsId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.DepartamentsId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.DepartamentsId })
+            @Html.ActionLink("Editar","Edit",new { id = item.DepartamentsId },new { @class = "btn btn-warning" }) |
+            @Html.ActionLink("Detalhes","Details",new { id = item.DepartamentsId },new { @class = "btn btn-info" } ) |
+            @Html.ActionLink("Delete","Delete",new { id = item.DepartamentsId },new { @class = "btn btn-danger" } )
         </td>
     </tr>
 }
