--- a/Views/Cities/Create.cshtml
+++ b/Views/Cities/Create.cshtml
@@ -26,7 +26,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DepartamentsId, "DepartamentsId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("DepartamentsId", null, htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("Departamento", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.DepartamentsId, "", new { @class = "text-danger" })
             </div>
         </div>
