--- a/Views/Departaments/Delete.cshtml
+++ b/Views/Departaments/Delete.cshtml
@@ -6,6 +6,8 @@
 
 <h2>Delete</h2>
 
+@Html.ValidationSummary(true, "", new { @class="text-danger"})
+
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Departaments</h4>
