--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("Contact","Contact","Home")</li>
                     <li>@Html.ActionLink("Departamentos","Index","Departaments")</li>
                     <li>@Html.ActionLink("Cidades","Index","Cities")</li>
+                    <li>@Html.ActionLink("Companhias","Index","Companies")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
