--- a/Views/Companies/Index.cshtml
+++ b/Views/Companies/Index.cshtml
@@ -12,6 +12,12 @@
 <table class="table">
     <tr>
         <th>
+            @Html.DisplayNameFor(model => model.Cities.Name)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Departaments.Name)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Companhia)
         </th>
         <th>
@@ -28,6 +34,12 @@
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.Cities.Name)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Departaments.Name)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.Companhia)
         </td>
