30. Programando Upload de Imagens

--- a/Views/Companies/Index.cshtml
+++ b/Views/Companies/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Create New","Create")
 </p>
 <table class="table">
     <tr>
@@ -32,32 +32,36 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cities.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Departaments.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Companhia)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Phone)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Address)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Logo)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.CompanyId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.CompanyId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CompanyId })
-        </td>
-    </tr>
-}
+    @foreach(var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cities.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Departaments.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Companhia)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Phone)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Address)
+            </td>
+            <td>
+                @if(!string.IsNullOrEmpty(item.Logo))
+                {
+                    <img src="@Url.Content(item.Logo)" alt="Image" style="width:100px;height:150px;max-width: 100%; height: auto;" />
+                }
+                </td>
+                <td>
+                    @Html.ActionLink("Edit","Edit",new { id = item.CompanyId }) |
+                    @Html.ActionLink("Details","Details",new { id = item.CompanyId }) |
+                    @Html.ActionLink("Delete","Delete",new { id = item.CompanyId })
+                </td>
+            </tr>
+        }
 
-</table>
+            </table>
